--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,14 @@
   		<artifactId>UtitilyClasses</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.ant</groupId>
+  		<artifactId>ant</artifactId>
+  		<version>1.9.7</version>
+  	</dependency>	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.3.1</version>
+  	</dependency>
   </dependencies>
 </project>
